# image-processing

./: .gitignore  Dockerfile  Makefile  README.md  environment.yml  pyproject.toml
.devcontainer/: devcontainer.json  post-create.sh
.github/workflows/: build-docker-image.yml  run-all-tests.yml
note_books/: 010_try_your_environment.ipynb  020_loading_images.ipynb  021_image_compression.ipynb  022_image_meta_data.ipynb  030_working_with_scikit_image.ipynb  031_read_only.ipynb  032_pixel_threshold.ipynb  033_grayscale.ipynb  034_keep_low_intensity.ipynb  035_slicing.ipynb  040_bitwise.ipynb  041_well_plate.ipynb  050_histograms.ipynb  051_colour_histogram.ipynb  052_well_plate.ipynb  060_blurring.ipynb  061_visualising_blurring.ipynb  070_thresholding.ipynb  071_dark_background_thresholding.ipynb  072_bacterial_colony.ipynb  072_otsus_method.ipynb  080_connected_component.ipynb  081_morphometrics.ipynb  082_filtering_object_size.ipynb  090_edge_detection.ipynb  100_capstone_challenge.ipynb
src/image_processing/: __init__.py  file_finder_service.py  image_display.py
tests/: __init__.py  file_finder_test.py  image_display_test.py
