[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aqua_marina"
version = "0.1.0"
authors = [
  { name="Joe Collins", email="joejcollins@gmail.com" },
]
description = "Data project template."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    # None because they are installed by the conda environment.yml file.
]

[project.urls]
"homepage" = "https://github.com/joejcollins/aqua-marina"
"repository" = "https://github.com/joejcollins/aqua-marina"
"documentation" = "https://github.com/joejcollins/aqua-marina"

# Find all the packages in the project using automatic discovery (src-layout).
[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
    |\.git
)/
'''

[tool.pyright]
exclude = ["**/node_modules",
    "**/__pycache__"
]
reportMissingImports = true
reportMissingTypeStubs = true
pythonVersion = "3.11"
pythonPlatform = "Linux"

[tool.ruff]
lint.select = ["F", "E", "W", "C90", "I"]
lint.fixable = ["ALL"]
target-version = "py311"
exclude = [
    ".git",
    ".github",
    ".pytest_cache",
    ".venv",
    ".vscode",
    "__pycache__"
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
follow_imports = "skip"
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-q --disable-warnings --cache-clear"
testpaths = [
    "./tests"
]